--- a/starter-code/client/src/app/entry-list/entry-list.component.html
+++ b/starter-code/client/src/app/entry-list/entry-list.component.html
@@ -1,8 +1,8 @@
 <div id="cont">
   <div *ngFor='let post of posts$ | async' class="container" >
     <a [routerLink]="['/home',post._id]">
-      <h2>{{ post.title }}</h2>
+      <h2>{{ dish.name }}</h2>
     </a>
-  <h2>{{ post.date }}</h2>
+  <h2>{{ dish.description }}</h2>
     </div>
   </div>
